table updates to fix errors on mobile view

--- a/careers/posts/2023/04/18/politics-of-performance-measurement.qmd
+++ b/careers/posts/2023/04/18/politics-of-performance-measurement.qmd
@@ -100,6 +100,7 @@ In the course of this process, we established the benchmarks in Table 1 based on
 ::: figure-caption
 **Table 1:** Specialty court best practices translated into quantitative measures.
 :::
+::: {.table-responsive}
 
 | Benchmark                                                                                             | Best practice | Rationale                                                                                                                               |
 |-------------------------|:------------:|----------------------------------|
@@ -110,13 +111,14 @@ In the course of this process, we established the benchmarks in Table 1 based on
 | 5\. Percent of graduates employed, seeking education, or supported through family, partner, SSI, etc. |     100%      | NADCP best practice recommended against releasing participants without financial support, which all but guarantees relapse or rearrest. |
 | 6\. Percent of participants with "low-risk" assessment score                                          |      0%       | NADCP best practice recommended moderate- or high-risk participants. Research had shown that low-risk participants get little benefit.  |
 | 7\. Average sessions per participant per month                                                        |      1+       | NADCP best practice recommended sessions be held at least monthly.                                                                      |
+:::
 
 Grantee performance data for each benchmark would be generated from the individual level data that courts sent us. Crucially, we sent our aggregations back to grantees for confirmation prior to using them in any kind of evaluation, alongside the program-wide average and the best practice values for comparison (example in the table below). If something didn't look right, they had the chance to let us know before we took their numbers as final.
 
 ::: figure-caption
 **Table 2:** Specialty court best practices compared with program-wide averages and grantee reported values.
 :::
-
+::: {.table-responsive}
 |                                                                                                       |                   |                          |                             |
 |-----------------------------------|:-----------:|:-----------:|:-----------:|
 | **Benchmark**                                                                                         | **Best practice** | **Program-wide average** | **Grantee reported values** |
@@ -127,6 +129,7 @@ Grantee performance data for each benchmark would be generated from the individu
 | 5\. Percent of graduates employed, seeking education, or supported through family, partner, SSI, etc. |       100%        |           95%            |            100%             |
 | 6\. Percent of participants with "low-risk" assessment score                                                |        0%         |           18%            |             2%              |
 | 7\. Average sessions per participant per month                                                        |        1+         |            2             |             3.7             |
+:::
 
 In the end, we found seven grants that we could unequivocally recommend be cut. Two of the seven had effectively never gotten off the ground, and served almost no participants the entire year. The other five served mostly low-risk participants, the type of people that research had shown do not benefit from specialty court programs. Some of these grantees were inevitably disappointed at the decision, but we had so actively worked within the field to develop and justify our processes that they understood why the decision had been made.
 
