--- a/viewpoints/editors-blog/posts/2023/03/15/AI-screening.qmd
+++ b/viewpoints/editors-blog/posts/2023/03/15/AI-screening.qmd
@@ -11,7 +11,6 @@ author: Brian Tarran
 date: 03/15/2023
 toc: true
 bibliography: refs.bib
-citation-location: margin
 image: images/teacher-marking-homework.png
 image-alt: A teacher is marking homework and trying to decide whether a written piece of text has been created by a student or by a large language model, digital art. Created by DALL·E, prompt by Real World Data Science.
 aliases: 
@@ -57,9 +56,11 @@ This prevalence figure is likely to vary based on where students live, what age 
 
 So, let's assume for the moment that 5% of homework assignments are AI-generated. If you were screening 1,000 pieces of homework with the OpenAI classifier, you'd see something close to the following results:
 
+::: {.table-responsive}
 |         | True positives | False positives | True negatives | False negatives |
 |---------|---------------:|----------------:|---------------:|----------------:|
 | Results |             13 |              86 |            864 |              37 |
+:::
 
 The figures below show the results graphically as proportions of (a) all tests and (b) all positive tests. (All plots are produced using Python and the `matplotlib` package; code and functions are available from [this GitHub repository](https://github.com/brtarran/screening-tests).)
 
@@ -79,9 +80,11 @@ From Figure 1b, we see that if the classifier delivers a "likely AI-written" res
 
 If we reproduce our figures using a prevalence rate of 17%, also from the Stanford survey, the chance that a positive result is a true positive is now about 37%.
 
+::: {.table-responsive}
 |         | True positives | False positives | True negatives | False negatives |
 |---------|---------------:|----------------:|---------------:|----------------:|
 | Results |             44 |              75 |            755 |             126 |
+:::
 
 ![](images/fig2a.png){fig-alt="Horizontal stacked bar chart showing test results as a percentage of all tests, assuming 17% prevalence of AI-written homework" fig-align="center"}
 
@@ -97,9 +100,12 @@ If we reproduce our figures using a prevalence rate of 17%, also from the Stanfo
 
 Yet another survey, [this one from Intelligent.com](https://www.prweb.com/releases/intelligent_com_survey_finds_30_percent_of_college_students_use_artificial_intelligence_chatbot_chatgpt_for_written_homework/prweb19141759.htm), claims that 30% of college students have used ChatGPT for written homework. Plugging this number into our calculations, the chance that a positive test result is a true positive is now slightly better than 50/50. 
 
+::: {.table-responsive}
+
 |         | True positives | False positives | True negatives | False negatives |
 |---------|---------------:|----------------:|---------------:|----------------:|
 | Results |             78 |              63 |            637 |             222 |
+:::
 
 ![](images/fig3a.png){fig-alt="Horizontal stacked bar chart showing test results as a percentage of all tests, assuming 30% prevalence of AI-written homework" fig-align="center"}
 
