add responsive tables

--- a/ideas/tutorials/posts/2023/04/13/flowers.qmd
+++ b/ideas/tutorials/posts/2023/04/13/flowers.qmd
@@ -645,6 +645,7 @@ tibble(`last frost date` = frost_day,
 ```
 
 ::: {#tab-table3}
+<div style="overflow-x: scroll; width:100%; margin-bottom: 1.5em;">
 <table class="table" style="margin-left: auto; margin-right: auto; margin-bottom: 1.5em;">
 <caption>
 <b>Table 3:</b> Last frost date and lilac bloom date at Brussels Observatory in 1839.
@@ -670,6 +671,7 @@ bloom date
 </tr>
 </tbody>
 </table>
+</div>
 
 :::
 
@@ -730,6 +732,7 @@ quetelet %>%
 ```
 
 ::: {#tab-table4}
+<div style="overflow-x: scroll; width:100%; margin-bottom: 1.5em;">
 <table class="table" style="margin-left: auto; margin-right: auto; margin-bottom: 1.5em;">
 <caption>
 <b>Table 4:</b> Reproduction of Quetelet’s analysis.
@@ -767,6 +770,7 @@ standard error (°C²)
 </tr>
 </tbody>
 </table>
+</div>
 
 :::
 
@@ -792,6 +796,7 @@ quetelet %>%
 ```
 
 ::: {#tab-table5}
+<div style="overflow-x: scroll; width:100%; margin-bottom: 1.5em;">
 <table class="table" style="margin-left: auto; margin-right: auto; margin-bottom: 1.5em;">
 <caption>
 <b>Table 5:</b> Predictions using Quetelet’s law are accurate within a week on average.
@@ -817,6 +822,7 @@ root mean squared error (days)
 </tr>
 </tbody>
 </table>
+</div>
 
 :::
 
@@ -837,6 +843,7 @@ quetelet %>%
 ```
 
 ::: {#tab-table6}
+<div style="overflow-x: scroll; width:100%; margin-bottom: 1.5em;">
 <table class="table" style="margin-left: auto; margin-right: auto; margin-bottom: 1.5em;">
 <caption>
 <b>Table 6:</b> Predictions using the average bloom date are off by a week or more on average.
@@ -862,6 +869,7 @@ root mean squared error (days)
 </tr>
 </tbody>
 </table>
+</div>
 
 :::
 
@@ -1464,6 +1472,7 @@ usa_npn %>%
 ```  
 
 ::: {#tab-table9}
+<div style="overflow-x: scroll; width:100%; margin-bottom: 1.5em;">
 <table class="table" style="margin-left: auto; margin-right: auto; margin-bottom: 1.5em;">
 <caption>
 <b>Table 9:</b> Replication of Quetelet’s analysis.
@@ -1501,6 +1510,7 @@ standard error (°C²)
 </tr>
 </tbody>
 </table>
+</div>
 
 :::
 
@@ -1527,6 +1537,7 @@ usa_npn %>%
 ```
 
 ::: {#tab-table10}
+<div style="overflow-x: scroll; width:100%; margin-bottom: 1.5em;">
 <table class="table" style="margin-left: auto; margin-right: auto; margin-bottom: 1.5em;">
 <caption>
 <b>Table 10:</b> Predictions using Quetelet’s law are accurate within about two weeks on average.
@@ -1552,6 +1563,7 @@ root mean squared error (days)
 </tr>
 </tbody>
 </table>
+</div>
 
 :::
 
@@ -1608,6 +1620,7 @@ usa_npn %>%
   kable_styling()
 ```
 :::{#tab-table11}
+<div style="overflow-x: scroll; width:100%; margin-bottom: 1.5em;">
 <table class="table" style="margin-left: auto; margin-right: auto; margin-bottom: 1.5em;">
 <caption>
 <b>Table 11:</b> Predictions using the average bloom date are off by three weeks or more on average.
@@ -1633,6 +1646,7 @@ root mean squared error (days)
 </tr>
 </tbody>
 </table>
+</div>
 
 :::
   
@@ -1926,7 +1940,8 @@ tibble(`last frost date` = frost_day_br,
 ```
 
 :::{#tab-table13}
-<table class="table" style="margin-left: auto; margin-right: auto; margin-bottom: 1.5em">
+<div style="overflow-x: scroll; width:100%; margin-bottom: 1.5em;">
+<table class="table" style="margin-left: auto; margin-right: auto; margin-bottom: 1.5em;">
 <caption>
 <b>Table 13:</b> Last frost date and lilac bloom date in Brussels in 2023.
 </caption>
@@ -1951,6 +1966,7 @@ bloom date
 </tr>
 </tbody>
 </table>
+</div>
 
 :::
 
