homepage and standfirst updated

--- a/index.qmd
+++ b/index.qmd
@@ -16,7 +16,7 @@ listing:
     - /careers
     - /viewpoints
     - "!index.qmd"
-    - "!politics-of-modelling.qmd"
+    - "!ai-fringe.qmd"
     sort: "date desc"
     type: grid
     categories: false
@@ -39,21 +39,22 @@ listing:
     max-items: 3
     feed: false
 
-  # - id: ideas
-  #   contents: 
-  #   - /ideas
-  #   - "!index.qmd"
-  #   sort: "date desc"
-  #   type: grid
-  #   categories: false
-  #   sort-ui: false
-  #   filter-ui: false
-  #   max-items: 3
-  #   feed: false
+  - id: ideas
+    contents: 
+    - /ideas
+    - "!index.qmd"
+    - "!dsb-live.qmd"
+    sort: "date desc"
+    type: grid
+    categories: false
+    sort-ui: false
+    filter-ui: false
+    max-items: 3
+    feed: false
 
   - id: careers
     contents: 
-    - /careers/posts
+    - /careers
     - "!index.qmd"
     sort: "date desc"
     type: grid
@@ -65,8 +66,10 @@ listing:
 
   - id: viewpoints
     contents: 
-    - /viewpoints/posts
+    - /viewpoints
     - "!index.qmd"
+    - "!ai-fringe.qmd"
+    - "!politics-of-modelling.qmd"
     sort: "date desc"
     type: grid
     categories: false
@@ -99,18 +102,18 @@ listing:
   #   max-items: 3
   #   feed: false
 
-  - id: interviews
-    contents: 
-    - /viewpoints/interviews
-    - "!index.qmd"
-    - "!politics-of-modelling.qmd"
-    sort: "date desc"
-    type: grid
-    categories: false
-    sort-ui: false
-    filter-ui: false
-    max-items: 3
-    feed: false
+  # - id: interviews
+  #   contents: 
+  #   - /viewpoints/interviews
+  #   - "!index.qmd"
+  #   - "!politics-of-modelling.qmd"
+  #   sort: "date desc"
+  #   type: grid
+  #   categories: false
+  #   sort-ui: false
+  #   filter-ui: false
+  #   max-items: 3
+  #   feed: false
 
   # - id: career-profiles
   #   contents: 
@@ -128,15 +131,15 @@ toc: false
 ---
 ::: {.content-container}
 ::: {.top-story .purple-background}
-<a href="/viewpoints/interviews/posts/2023/11/24/politics-of-modelling.qmd">
+<a href="/viewpoints/posts/2023/12/06/ai-fringe.qmd">
 
 ::: grid
 ::: {.g-col-12 .g-col-lg-4 .top-story-text}
-## 'I would like modellers to be less ambitious in developing monster models that are impossible to inspect'
-Real World Data Science interviews Andrea Saltelli, co-editor of 'The Politics of Modelling,' about pandemic models, trust in science, and why we must seek to uncover the assumptions that  shape model outputs.  
+## Evaluating artificial intelligence: How data science and statistics can make sense of AI models
+How can we help organisations to deploy AI in a responsible way? Why have evaluation metrics trailed behind advances in AI technology? And, are data inputs receiving the attention they deserve in debates over AI development? Read on for highlights of the Royal Statistical Society's recent AI Fringe event.   
 :::
 ::: {.g-col-12 .g-col-lg-8 .top-story-img}
-![](viewpoints/interviews/posts/2023/11/24/images/andrea-saltelli.png)
+![](viewpoints/posts/2023/12/06/images/llm-3d-shapes.png)
 :::
 :::
 
@@ -171,6 +174,48 @@ Welcome to **Real World Data Science**, a new project from the [Royal Statistica
 ::: {.pullout-block .black-background}
 ![](images/quote-purple.png){width="100px"}
 
+## Open science supports reproducible research. This means that others can download your data and code, re-run the analysis, and see if they obtain the same results. To get the full benefit of open science and promote reproducibility, code needs to be written with enough explanations or comments to help others understand the logic of the various stages of an analysis.
+Isabel Sassoon, senior lecturer, Brunel University London 
+
+::: {.button}
+[How to 'open science'](ideas/posts/2023/11/06/how-to-open-science.qmd)
+:::
+
+:::
+:::
+:::
+
+::: {.content-container}
+::: {.listing-block}
+<a href="ideas/index.qmd">
+
+## Ideas
+</a> 
+
+::: {#ideas}
+:::
+
+:::
+:::
+
+::: {.content-container}
+::: {.listing-block}
+<a href="careers/index.qmd">
+
+## Careers 
+</a>
+
+::: {#careers}
+:::
+
+:::
+:::
+
+::: {.pullout-text}
+::: {.pullout-container}
+::: {.pullout-block .black-background}
+![](images/quote-purple.png){width="100px"}
+
 ## We want to be a strong voice in the debate on AI because it is underpinned by statistical and mathematical techniques. We have a really important role to play in focusing attention not only on AI outputs but on inputs. That is an area that hasn’t received enough attention but it is one that statisticians understand incredibly well.
 Andrew Garrett, president, Royal Statistical Society 
 
@@ -184,54 +229,12 @@ Andrew Garrett, president, Royal Statistical Society
 
 ::: {.content-container}
 ::: {.listing-block}
-<a href="viewpoints/interviews/index.qmd">
-
-## Interviews 
-</a>
-
-::: {#interviews}
-:::
-
-:::
-:::
-
-::: {.content-container}
-::: {.listing-block}
 <a href="viewpoints/index.qmd">
 
-## Viewpoints
-</a> 
-
-::: {#viewpoints}
-:::
-
-:::
-:::
-
-::: {.pullout-text}
-::: {.pullout-container}
-::: {.pullout-block .black-background}
-![](images/quote-purple.png){width="100px"}
-
-## AI models didn’t invent medicine, accountancy or engineering. They didn’t learn anything directly from the world – human experts taught AI models how to do these things. And they [the human experts] did it without giving their permission, or even knowing that it was happening. The large tech companies have sucked up all of human knowledge and culture and now provide access to it for the price of an API call. This is a huge transfer of power and value from humanity to the tech companies.
-Martin Goodson on why we need 'an AI for humanity'
-
-::: {.button}
-[Read the article](viewpoints/posts/2023/10/20/ai-for-humanity.qmd)
-:::
-
-:::
-:::
-:::
-
-::: {.content-container}
-::: {.listing-block}
-<a href="careers/index.qmd">
-
-## Careers 
+## Viewpoints 
 </a>
 
-::: {#careers}
+::: {#viewpoints}
 :::
 
 :::
