--- a/viewpoints/posts/2023/12/06/ai-fringe.qmd
+++ b/viewpoints/posts/2023/12/06/ai-fringe.qmd
@@ -1,7 +1,7 @@
 ---
 title: "Evaluating artificial intelligence: How data science and statistics can make sense of AI models"
 description: |
-  How can we help organisations to deploy AI in a responsible way? Why have evaluation metrics trailed behind advances in AI technology? And, are data inputs -- compared to model outputs -- receiving the attention they deserve in debates over AI development? Read on for highlights of the Royal Statistical Society's recent AI Fringe event. 
+  How can we help organisations to deploy AI in a responsible way? Why have evaluation metrics trailed behind advances in AI technology? And, are data inputs receiving the attention they deserve in debates over AI development? Read on for highlights of the Royal Statistical Society's recent AI Fringe event. 
 categories:
   - AI
   - Large language models
