--- a/viewpoints/posts/2023/12/06/ai-fringe.qmd
+++ b/viewpoints/posts/2023/12/06/ai-fringe.qmd
@@ -33,7 +33,8 @@ The RSS event was chaired by Andrew Garrett, the Society’s president, and form
 
 What follows are some edited highlights and key takeaways from the discussion.
 
-::: {.keyline}
+::: keyline
+---
 :::
 
 ## AI safety, and AI risks
