final text edits

--- a/index.qmd
+++ b/index.qmd
@@ -136,7 +136,7 @@ toc: false
 ::: grid
 ::: {.g-col-12 .g-col-lg-4 .top-story-text}
 ## AI and digital ethics in 2023: a 'remarkable, eventful year'
-At TechUK's Digital Ethics Summit, experts looked back on a year in which AI chatbots dominated debates, helped shape legislative agendas, and opened our eyes to the dangers posed by the 'democratisation of disinformation.'    
+At techUK's Digital Ethics Summit, experts looked back on a year in which AI chatbots dominated debates, helped shape legislative agendas, and opened our eyes to the dangers posed by the 'democratisation of disinformation.'    
 :::
 ::: {.g-col-12 .g-col-lg-8 .top-story-img}
 ![](viewpoints/editors-blog/posts/2023/12/08/images/kajetan-sumila-bxaqUeVIGHU-unsplash.png)
