img resized + article formatting + home updated

--- a/ideas/tutorials/posts/2023/12/12/xmas-cards.qmd
+++ b/ideas/tutorials/posts/2023/12/12/xmas-cards.qmd
@@ -1,23 +1,13 @@
 ---
 title: Creating Christmas cards with R
 description: |
-  The programming langauge R is capable of creating a wide variety of geometric shapes that can be used to construct high quality graphics -- including festive images. In this tutorial, Nicola Rennie walks us through the process of using R packages to create and send Christmas cards with R.
+  The programming language R is capable of creating a wide variety of geometric shapes that can be used to construct high quality graphics -- including festive images. In this tutorial, Nicola Rennie walks us through the process of using R packages to create and send Christmas cards with R.
 categories:
   - R
   - Data visualisation
 author: Nicola Rennie
-date: last-modified
-date-format: long
+date: 12/12/2023
 toc: true
-format:
-  html:
-    theme: [lux, rwds.scss]
-    css: rwds.css
-    toc: true
-    grid:
-      sidebar-width: 0px
-      body-width: 1000px
-      margin-width: 250px
 bibliography: references.bib
 execute:
   eval: false
@@ -25,8 +15,8 @@ execute:
   messages: false
   error: false
   warning: false
-page-layout: article
-title-block-banner: true
+image: images/xmas-card.png
+image-alt: Dark blue square with off-white rectangle at the bottom and small random white stars, and two white circles slightly off centre. Five black dots denote two eyes and three buttons on a snowman. Two brown lines look like arms. Two red rectangles form a hat. Orange triangle as a nose, with text reading Merry Christmas at the bottom.
 ---
 
 When you think about data visualisation in R [@R-base], you'd be forgiven for not jumping straight to thinking about creating Christmas cards. However, the package and functions we often use to create bar charts and line graphs can be repurposed to create festive images. This tutorial provides a step-by-step guide to creating a Christmas card featuring a snowman -- entirely in R. Though this seems like just a fun exercise, the functions and techniques you learn in this tutorial can also transfer into more traditional data visualisations created using {ggplot2} [@ggplot2] in R. 
@@ -292,3 +282,33 @@ If you're curious about making Christmas cards with R but you don't have the tim
 Emil Hvitfeldt has also created a [Quarto](https://quarto.org/) [extension that gives the effect of falling snowflakes](https://github.com/EmilHvitfeldt/quarto-snow) on HTML outputs -- including revealjs slides which is perfect for festive presentations!
 
 Have you made your own Christmas cards with R? We'd love to see your designs!
+
+::: {.callout-note style="margin-top: 2.25rem;" appearance="simple"}
+Inspired by Nicola's tutorial, Real World Data Science has indeed made its own Christmas card design. [Check out our attempt over at the Editors' Blog](/viewpoints/editors-blog/posts/2023/12/12/rwds-xmas-card.qmd)!
+:::
+
+::: {.article-btn}
+[Explore more Tutorials](/ideas/tutorials/index.qmd)
+:::
+
+::: {.further-info}
+::: grid
+::: {.g-col-12 .g-col-md-12}
+About the author
+: **Nicola Rennie** is a lecturer in health data science in the Centre for Health Informatics, Computing, and Statistics (CHICAS) within Lancaster Medical School at Lancaster University. She's an R enthusiast, data visualisation aficionado, and generative artist, among other things. Her personal website is hosted at [nrennie.rbind.io](https://nrennie.github.io/), and she is a co-author of the [Royal Statistical Society's Best Practices for Data Visualisation](https://royal-statistical-society.github.io/datavisguide/).
+:::
+
+::: {.g-col-12 .g-col-md-6}
+Copyright and licence
+: &copy; 2023 Nicola Rennie
+
+<a href="http://creativecommons.org/licenses/by/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;"> <img style="height:22px!important;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/cc.svg?ref=chooser-v1"><img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/by.svg?ref=chooser-v1"></a> This article is licensed under a Creative Commons Attribution 4.0 (CC BY 4.0) <a href="http://creativecommons.org/licenses/by/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;"> International licence</a>.
+
+:::
+
+::: {.g-col-12 .g-col-md-6}
+How to cite
+: Rennie, Nicola. 2023. "Creating Christmas cards with R." Real World Data Science, December 12, 2023. [URL](https://realworlddatascience.net/ideas/tutorials/posts/2023/12/12/xmas-cards.html)
+:::
+:::
+:::
