--- a/index.qmd
+++ b/index.qmd
@@ -16,7 +16,7 @@ listing:
     - /careers
     - /viewpoints
     - "!index.qmd"
-    - "!digital-ethics-summit.qmd"
+    - "!xmas-cards.qmd"
     sort: "date desc"
     type: grid
     categories: false
@@ -29,7 +29,6 @@ listing:
     contents: 
     - /case-studies
     - "!index.qmd"
-    - "!splink.qmd"
     sort: "date desc"
     type: grid
     categories: false
@@ -43,6 +42,7 @@ listing:
     - /ideas
     - "!index.qmd"
     - "!dsb-live.qmd"
+    - "!xmas-cards.qmd"
     sort: "date desc"
     type: grid
     categories: false
@@ -70,6 +70,7 @@ listing:
     - "!ai-fringe.qmd"
     - "!politics-of-modelling.qmd"
     - "!digital-ethics-summit.qmd"
+    - "!rwds-xmas-cards.qmd"
     sort: "date desc"
     type: grid
     categories: false
@@ -131,15 +132,15 @@ toc: false
 ---
 ::: {.content-container}
 ::: {.top-story .purple-background}
-<a href="/viewpoints/editors-blog/posts/2023/12/08/digital-ethics-summit.qmd">
+<a href="/ideas/tutorials/posts/2023/12/12/xmas-cards.qmd">
 
 ::: grid
 ::: {.g-col-12 .g-col-lg-4 .top-story-text}
-## AI and digital ethics in 2023: a 'remarkable, eventful year'
-At techUK's Digital Ethics Summit, experts looked back on a year in which AI chatbots dominated debates, helped shape legislative agendas, and opened our eyes to the dangers posed by the 'democratisation of disinformation.'    
+## Creating Christmas cards with R
+The programming language R is capable of creating a wide variety of geometric shapes that can be used to construct high quality graphics -- including festive images. Nicola Rennie walks us through the process of using R packages to create and send Christmas cards with R.    
 :::
 ::: {.g-col-12 .g-col-lg-8 .top-story-img}
-![](viewpoints/editors-blog/posts/2023/12/08/images/kajetan-sumila-bxaqUeVIGHU-unsplash.png)
+![](ideas/tutorials/posts/2023/12/12/images/xmas-card.png)
 :::
 :::
 
