text updated, images added, home updated

--- a/index.qmd
+++ b/index.qmd
@@ -68,9 +68,8 @@ listing:
     - /viewpoints
     - "!index.qmd"
     - "!ai-fringe.qmd"
-    - "!politics-of-modelling.qmd"
     - "!digital-ethics-summit.qmd"
-    - "!rwds-xmas-cards.qmd"
+    - "!rwds-xmas-card.qmd"
     sort: "date desc"
     type: grid
     categories: false
@@ -201,12 +200,12 @@ Noah Wright on 'learning from failure'
 
 ::: {.content-container}
 ::: {.listing-block}
-<a href="ideas/index.qmd">
+<a href="viewpoints/index.qmd">
 
-## Ideas
-</a> 
+## Viewpoints 
+</a>
 
-::: {#ideas}
+::: {#viewpoints}
 :::
 
 :::
@@ -228,15 +227,14 @@ Isabel Sassoon, senior lecturer, Brunel University London
 :::
 :::
 
-
 ::: {.content-container}
 ::: {.listing-block}
-<a href="viewpoints/index.qmd">
+<a href="ideas/index.qmd">
 
-## Viewpoints 
-</a>
+## Ideas
+</a> 
 
-::: {#viewpoints}
+::: {#ideas}
 :::
 
 :::
