--- a/viewpoints/editors-blog/posts/2023/12/12/rwds-xmas-card.qmd
+++ b/viewpoints/editors-blog/posts/2023/12/12/rwds-xmas-card.qmd
@@ -9,8 +9,8 @@ categories:
 author: Brian Tarran
 date: 12/12/2023
 toc: true
-# image: images/kajetan-sumila-bxaqUeVIGHU-unsplash.png
-# image-alt: Black computer screen showing a folder icon, with the numbers 2023 being typed out below.
+image: images/rwds-christmas-card-thumb.png
+image-alt: Purple square with white snowflakes and green tree in foreground. Tree is decorated with red and gold baubles of various sizes.
 execute:
   eval: false
   echo: true
@@ -24,6 +24,8 @@ A few weeks back, I managed to catch Nicola Rennie's presentation to the [Oxford
 If you missed the Meetup session, Nicola has kindly written [a tutorial for Real World Data Science](/ideas/tutorials/posts/2023/12/12/xmas-cards.qmd) that walks through all the necessary steps to create a snowman against a snowy night's sky. You'll want to read that tutorial first before returning to this blog.
 
 My design uses the same basic setting as Nicola's but updates the scene to reflect the Real World Data Science (RWDS) brand colours, and I replace the snowman with a Christmas tree adorned with coloured baubles.
+
+## Snowy sky
 
 We begin by loading in the following packages, adding a couple extra to the ones Nicola uses:
 
@@ -81,6 +83,14 @@ s3 <- s2 +
   coord_fixed(expand = FALSE)
 s3
 ```
+
+:::{layout-ncol=2}
+![](images/s2.png){fig-alt="Purple square with white snowflakes."}
+
+![](images/s3.png){fig-alt="Purple square with white snowflakes and off-white rectangle at the bottom."}
+:::
+
+## Oh, Christmas tree
 
 To build her snowman, Nicola created a series of circles that were stacked and overlaid. A simple Christmas tree, though, requires a series of triangles. So, taking Nicola's snowman's nose (also a triangle) as our starting point, we coded three sets of coordinates -- `tree_pts1`, `tree_pts2`, and `tree_pts3` -- for three triangles of decreasing size that would sit on top of one another.
 
@@ -180,6 +190,16 @@ s7 <- s6 +
 s7
 ```
 
+:::{layout-ncol=3}
+![](images/s4.png){fig-alt="Purple square with white snowflakes and green tree in foreground."}
+
+![](images/s5.png){fig-alt="Purple square with white snowflakes and green tree in foreground, now with brown trunk at foot of tree."}
+
+![](images/s7.png){fig-alt="Purple square with white snowflakes and green tree in foreground. Tree is decorated with red and gold baubles of various sizes."}
+:::
+
+## Season's greetings
+
 The final step was to add text to the top of the image, wishing you all a Merry Christmas, and our logo to the bottom, so you know who the card is from:
 
 ```r
@@ -208,6 +228,8 @@ s9 <- s8 +
   ) 
 s9
 ```
+
+![](images/rwds-christmas-card.png){fig-align="center" fig-alt="Purple square with white snowflakes and green tree in foreground. Tree is decorated with red and gold baubles of various sizes. Text over tree reads Merry Christmas. Under tree is a logo for the Real World Data Science website."}
 
 I hope you like the Christmas card! From all of us at Real World Data Science, thank you for your support throughout 2023. Merry Christmas, happy holidays, and best wishes for 2024!
 
