images, header and intro added

--- a/viewpoints/interviews/posts/2023/12/15/ian-diamond.qmd
+++ b/viewpoints/interviews/posts/2023/12/15/ian-diamond.qmd
@@ -1,14 +1,17 @@
 ---
-title: "Quote"
+title: "'I was pretty clear in my mind that we were into a no-going-back situation'"
 description: |
-  Intro
+  Real World Data Science interviews UK national statistician Professor Sir Ian Diamond about culture change and innovation in the national statistical system post-Covid, building trust through transparency, and using AI tools to empower people to interrogate data.
 categories:
-  - Modelling
-  - Public policy
+  - Data
+  - People
+  - Innovation
+  - Data literacy
+  - Public engagement
 author: Brian Tarran
 date: 12/15/2023
-# image: images/andrea-saltelli.png
-# image-alt: Portrait photo of Andrea Saltelli, co-editor of 'The Politics of Modelling.'
+image: images/ian-diamond.png
+image-alt: Photo of national statistician Professor Sir Ian Diamond, standing, with microphone, during a talk.
 toc: false
 ---
 
@@ -39,7 +42,20 @@ Was it culture? Was it improved processes? Was it better methods? All of the abo
 
 And so, I do think we have changed the culture, changed our techniques, and changed our data. But does that mean that we've metaphorically thrown away the baby with the bathwater? Absolutely not. What we have now are appropriate methodologies to answer appropriate questions. Do we still use qualitative data? A hundred percent, when it is necessary to do so. Do we still use surveys? Yes, we've got some of the best surveys in the world. But equally, we also use digital data, administrative data, and we use very modern techniques of analysing those data. And we use data science in its broadest sense as often as we can.  
 
-So, I do think it's been a major change in what we do, and that will continue. But underlying it all is a total commitment to quality, a total commitment to making sure that we have the best data to answer the question that we are trying to answer, and that all the time we are using the best approach to answer the questions.  
+So, I do think it's been a major change in what we do, and that will continue. But underlying it all is a total commitment to quality, a total commitment to making sure that we have the best data to answer the question that we are trying to answer, and that all the time we are using the best approach to answer the questions.
+
+::: {.pullquote-container}
+::: grid
+::: {.g-col-12 .g-col-lg-4}
+![Professor Sir Ian Diamond, UK national statistician.](images/ian-diamond-sq.png){fig-alt="Photo of national statistician Professor Sir Ian Diamond, standing, with microphone, during a talk." fig-align="left"}
+::: 
+::: {.g-col-12 .g-col-lg-8 .pullquote-grid .pullquote}
+![](/images/pullquote-purple.png){width="50px"}
+
+We have changed the culture, our techniques, and our data. What we have now are appropriate methodologies to answer appropriate questions. Do we still use qualitative data? A hundred percent, when it is necessary to do so. Do we still use surveys? Yes, we've got some of the best surveys in the world. But equally, we also use digital data, administrative data, and we use very modern techniques of analysing those data.
+:::
+:::
+:::
 
 **As well as changing the culture and the processes within the ONS itself, has some of your work also been about trying to bring the user community with you? When I first started reporting on official statistics 20 years ago, there was a sense that users of the data valued consistency in methodology, because that meant they could go back and look at the time series. But now, with this emphasis on innovation and looking at different ways of producing insight from different sources of data, has there been a tension, if you like, between these two cultures?**\
 That whole question of “we've always done it this way” against “we can now do it better” is a super important one. And the length of time series is also important. When we change the ways of doing things, we need to take our user community with us, and we do. At the same time, we also need a very strong narrative (a) about why what we are doing gives us better data, and (b) about what the changes in the time series mean. So, just this year, with regard to prices and inflation, we've been able to bring in much better data than we had previously on rail ticket prices by using electronic data. It's really super exciting. But we didn't just bring them in and say, “Hey, we’ve got this new way of doing train prices and we're planning to do the same again next year with used car prices using electronic data!” What we do is we dual run, and we work with our prices advisory committee to ensure that we understand what the implications of this change are, and we understand how to communicate them. But, you've got to be measuring the economy in the very, very best way that you can. We should not shy away from improving what we do. 
@@ -62,7 +78,7 @@ The answer is yes. Under both the leadership of Laura Gilbert, who is head of 10
 **You gave a keynote address at the RSS Conference in September, and one of the things you mentioned that I was particularly excited about was “Stat Chat.” I understand this is in the very early stages, and I have a very rudimentary understanding that it might well be a large language model trained on the ONS website and the data resources available, as a way to query the website. Can you tell me a bit more about the project?**\
 We’re in private beta, and so there's a whole set of agendas there. But we started it as a much better way to enable people to interrogate a pretty complex website with an enormous amount of data on, and to not only get to the datasets but to get to the existing metadata that are attached to them. What we wanted to do was to use open-source models, where the underlying data and the research behind them are made publicly available, so there's nothing secret about this at the moment, and it's very early stage. But we see the potential, as we move forward, as being able to really make it much easier for people to interrogate the data that we own and the data that we have published. If we can actually use large language models to enable people to be able to ask questions and then to get an authoritative answer from publicly available data, that seems to me to be a good place to be. 
 
-**I imagine, though, that when you're dealing with something like national statistics, you need to be very alive to the danger of the hallucination problem in large language models; that if you're querying something, it doesn't throw up an invented statistic?**\
+**I imagine, though, that when you're dealing with something like national statistics, you need to be very alive to the danger of [the hallucination problem in large language models](https://realworlddatascience.net/viewpoints/editors-blog/posts/2022/11/23/LLM-content-warning.html#qa); that if you're querying something, it doesn't throw up an invented statistic?**\
 I couldn't agree more. And that's why we're in private beta, working very hard to make sure that (a) it is working properly, (b) that it's got the right security around it, and (c) that it is actually really useful. 
 
 **The hallucination issue in LLMs leads us onto the topic of trust in information, and obviously the ONS is very keen to ensure that there is trust in official statistics and in the data that is produced. This is a wider problem than anything the ONS can hope to address by itself, but what are the kinds of conversations you're having internally about distrust in official sources of information?**\
@@ -91,7 +107,7 @@ Copyright and licence
 
 ::: {.g-col-12 .g-col-md-6}
 How to cite
-: Tarran, Brian. 2023. "Quote." Real World Data Science, December 15, 2023. [URL](https://realworlddatascience.net/viewpoints/interviews/posts/2023/12/15/ian-diamond.html)
+: Tarran, Brian. 2023. "'I was pretty clear in my mind that we were into a no-going-back situation.'" Real World Data Science, December 15, 2023. [URL](https://realworlddatascience.net/viewpoints/interviews/posts/2023/12/15/ian-diamond.html)
 :::
 :::
 :::
